# dev_guard

./: .coverage  .coverage.Brets-Mac-mini.local.57738.XHTwwHWx  .env.example  .gitignore  .goosehints  .pre-commit-config.yaml  .tool-versions  Makefile  README.md  debug_capabilities.py  example.py  pyproject.toml  pytest.ini  requirements.uv  simple_git_watcher_test.py  task_10_3_validation.py  task_10_4_validation.py  task_11_1_validation.py  task_11_2_validation.py  task_11_3_validation.py  task_11_3_validation_simple.py  task_13_1_basic_validation.py  task_13_1_validation.py  task_16_validation.py  task_19_2_validation.py  task_20_validation.py  task_21_validation.py  test-results.xml  test_coverage_summary.md  test_ollama.py  test_repo_auditor.py
.devcontainer/: devcontainer.json
.github/workflows/: ci-uv-matrix.json  ci.yml
.kiro/specs/dev-guard-autonomous-swarm/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
config/: config.yaml
data/: shared_memory.db
data/vector_db/: chroma.sqlite3
docs/: TODO.md  Task-10.2-Code-Quality-Integration-Complete.md  Task-10.3-AST-Goose-Integration-Complete.md  Task-10.4-Enhanced-Goose-Format-Complete.md  Task-11.1-Automated-Testing-QA-Complete.md  Task-11.2-TDD-Support-Complete.md  Task-11.3-Goose-QA-Integration-Complete.md  Task-12.1-Git-Watcher-Agent-Complete.md  Task-13.1-Impact-Analysis-Complete.md  Task-14.2-Incremental-Updates-Cleanup-Complete.md  Task-15-Dependency-Manager-Agent-Complete.md  Task-15.1-Dependency-Tracking-Version-Management-Complete.md  Task-16-Red-Team-Agent-Complete.md  Task-17-Docs-Agent-Complete.md  Task-18-MCP-Server-Complete.md  Task-19.2-User-Override-Manual-Intervention-Complete.md  Task-20-Notification-System-Complete.md  Task-21-Integration-Testing-Complete.md  dev_guard_rfp.md  quick-reference.md
docs/adr/: 0001-bootstrap-dev-guard.md
scripts/: generate_tests.py  run-tests.sh  setup-dev.sh  validate-setup.py
src/: __init__.py
src/dev_guard/: __init__.py  cli.py
src/dev_guard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dev_guard/adapters/: __init__.py  cache.py  repositories.py  tracing.py
src/dev_guard/adapters/postgres/: repositories.py
src/dev_guard/agents/: base_agent.py  code_agent.py  commander.py  dep_manager.py  docs.py  git_watcher.py  impact_mapper.py  planner.py  qa_agent.py  qa_test.py  red_team.py  repo_auditor.py
src/dev_guard/api/: config.py  swarm.py
src/dev_guard/core/: config.py  swarm.py
src/dev_guard/domain/: __init__.py  models.py
src/dev_guard/llm/: __init__.py  factory.py  ollama.py  openrouter.py  provider.py  smart.py
src/dev_guard/mcp/: __init__.py  models.py  server.py  tools.py
src/dev_guard/memory/: models.py  shared_memory.py  vector_db.py
src/dev_guard/notifications/: __init__.py  base.py  discord_provider.py  email_provider.py  notification_manager.py  slack_provider.py  telegram_provider.py  templates.py
tests/: README.md  conftest.py  test_cli.py  test_llm_providers.py  test_mcp_components.py  test_mcp_system.py  test_notifications.py  test_shared_memory.py  test_shared_memory_system.py  test_vector_database_system.py
tests/integration/: test_end_to_end_workflows.py  test_environment_setup.py  test_otel_tracer.py  test_performance_integration.py  test_postgres_repo.py  test_redis_cache.py  test_swarm_coordination.py  test_system_resilience.py  test_vector_db_integration.py
tests/unit/: test_base_agent.py  test_code_agent.py  test_commander_agent.py  test_config.py  test_enhanced_goose_format.py  test_enhanced_qa_agent.py  test_goose_integration.py  test_goose_patch_memory.py  test_planner_agent.py  test_sample.py  test_shared_memory.py  test_swarm_repository_scan.py  test_tdd_support.py  test_vector_db.py
tests/utils/: assertions.py  helpers.py
validations/: task_12_1_validation.py  task_12_1_validation_results.json  task_12_2_validation.py  task_13_1_basic_validation.py  task_13_1_validation.py  task_13_1_validation_results.json  task_16_simple_test.py  task_16_validation.py  task_17_simple_test.py  task_17_validation.py  task_18_validation.py  task_21_validation.py
