[build-system]
requires = ["hatchling>=1.17.0"]
build-backend = "hatchling.build"

[project]
name = "dev-guard"
version = "0.0.0"
description = "Developer-focused safety and policy utilities. Bootstrap package."
readme = "README.md"
authors = [
  { name = "Bret Bouchard", email = "bret@example.com" },
]
license = { text = "MIT" }
requires-python = ">=3.11,<3.12"
keywords = ["developer-tools", "safety", "policy"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/bretbouchard/dev_guard"
Repository = "https://github.com/bretbouchard/dev_guard"

[project.optional-dependencies]
# For running tests
test = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
]
# For local development
dev = [
  "mypy>=1.10",
  "ruff>=0.5.0",
]

[tool.uv]
# uv recognizes this section for dev-time dependencies
dev-dependencies = [
  "mypy>=1.10",
  "ruff>=0.5.0",
  "pytest>=8.2",
  "pytest-cov>=5.0",
]

# Poetry-compatible metadata for tooling that expects it.
[tool.poetry]
name = "dev-guard"
version = "0.0.0"
description = "Developer-focused safety and policy utilities. Bootstrap package."
readme = "README.md"
license = "MIT"
authors = ["Bret Bouchard <bret@example.com>"]
packages = [
  { include = "dev_guard", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10"
ruff = "^0.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
check_untyped_defs = true
no_implicit_optional = true
